--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="center tombol">
-            <a href="http://127.0.0.1:5000/api"><span data-attr="Cobain">Cobain</span><span data-attr="Yuk">Yuk</span></a>
+            <a href="https://asr-restapi.herokuapp.com/api"><span data-attr="Cobain">Cobain</span><span data-attr="Yuk">Yuk</span></a>
         </div>
 
         <div id="theme-options">
