--- a/templates/api.html
+++ b/templates/api.html
@@ -6,7 +6,7 @@
         <meta name="description" content="ASR Rests Documentation.">
 
         <!-- Base URL -->
-        <base href="http://127.0.0.1:5000" >
+        <base href="https://asr-restapi.herokuapp.com/" >
 
         <!-- Import Icon -->
         <link rel="icon" type="image/x-icon" href="/static/images/favicon.png">
