--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="icon" type="image/x-icon" href="/static/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
 
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
