--- a/templates/api.html
+++ b/templates/api.html
@@ -9,7 +9,7 @@
         <base href="https://asr-restapi.herokuapp.com/" >
 
         <!-- Import Icon -->
-        <link rel="icon" type="image/x-icon" href="/static/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
 
         <!-- Import Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
