--- a/templates/api.html
+++ b/templates/api.html
@@ -6,7 +6,7 @@
         <meta name="description" content="ASR Rests Documentation.">
 
         <!-- Base URL -->
-        <base href="https://asr-restapi.herokuapp.com/" >
+        <base href="https://asr-restapi.herokuapp.com" >
 
         <!-- Import Icon -->
         <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
@@ -16,7 +16,6 @@
 
         <!-- Import CSS -->
         <link rel="stylesheet" href="/static/css/default.css">
-        <link id="theme-style" rel="stylesheet" type="text/css" href="">
 
     </head>
 
